--- a/daily-challenge/index.html
+++ b/daily-challenge/index.html
@@ -7,18 +7,17 @@
       href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=Oswald:wght@200..700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="daily-challenge.css" />
+    <link rel="stylesheet" href="styles/shared.css" />
+    <link rel="stylesheet" href="styles/daily-challenge.css" />
     <title>My Daily Challenge</title>
   </head>
   <body>
+    <img src="images/challenges-trophy.jpg" alt="a trophy" />
     <h1>Vitas's Challenge for Wednesday, May 7th</h1>
     <p id="todays-challenge">
       Learn about the basics of web development - specifically dive into HTML &
       CSS.
     </p>
-    <p>
-      I'll achieve this goal by diving into
-      <a href="https://www.google.com">more learning resources</a>.
-    </p>
+    <p>Explore the <a href="full-week.html">full week</a>.</p>
   </body>
 </html>
