--- a/daily-challenge/full-week.html
+++ b/daily-challenge/full-week.html
@@ -10,13 +10,15 @@
     />
     <link rel="stylesheet" href="styles/shared.css" />
     <link rel="stylesheet" href="styles/full-week.css" />
-    <title>My Upcoming Challenges</title>
+    <title>My sssUpcoming Challenges</title>
   </head>
   <body>
     <h1>My Upcoming Challenges</h1>
     <a href="index.html">View Today's Challenge</a>
-    <p>Repeat what I learned about HTML & CSS</p>
-    <p>Do the exercises on HTML & CSS</p>
-    <p>Dive deeper into HTML & CSS and build more complex websites</p>
+    <ol>
+      <li>Repeat what I learned about HTML & CSS</li>
+      <li>Do the exercises on HTML & CSS</li>
+      <li>Dive deeper into HTML & CSS and build more complex websites</li>
+    </ol>
   </body>
 </html>
