--- a/daily-challenge/full-week.html
+++ b/daily-challenge/full-week.html
@@ -1,24 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<head>
+    <meta charset="UTF-8"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
     <link
-      href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=Oswald:wght@200..700&display=swap"
-      rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=Oswald:wght@200..700&display=swap"
+            rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles/shared.css" />
-    <link rel="stylesheet" href="styles/full-week.css" />
-    <title>My sssUpcoming Challenges</title>
-  </head>
-  <body>
+    <link rel="stylesheet" href="styles/shared.css"/>
+    <link rel="stylesheet" href="styles/full-week.css"/>
+    <title>My Upcoming Challenges</title>
+</head>
+<body>
+<header>
     <h1>My Upcoming Challenges</h1>
+    <p id="description">These are my goals for the next days</p>
     <a href="index.html">View Today's Challenge</a>
+</header>
+<main>
     <ol>
-      <li>Repeat what I learned about HTML & CSS</li>
-      <li>Do the exercises on HTML & CSS</li>
-      <li>Dive deeper into HTML & CSS and build more complex websites</li>
+        <li>
+            <h2>Tuesday, April 2nd</h2>
+            <p>Repeat what I learned about HTML & CSS</p>
+        </li>
+        <li class="highlight-goal">
+            <h2>Wednesday, April 3rd</h2>
+            <p>Do the exercises on HTML & CSS</p>
+        </li>
+        <li class="highlight-goal">
+            <h2>Thursday, April 4th</h2>
+            <p>Dive deeper into HTML & CSS and build more complex websites</p>
+        </li>
+        <li>
+            <h2>Friday, April 5th</h2>
+            <p>Learn all about forms</p>
+        </li>
     </ol>
-  </body>
+</main>
+</body>
 </html>
