--- a/daily-challenge/index.html
+++ b/daily-challenge/index.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<head>
+    <link rel="preconnect" href="https://fonts.googleapis.com"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
     <link
-      href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=Oswald:wght@200..700&display=swap"
-      rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=Oswald:wght@200..700&display=swap"
+            rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles/shared.css" />
-    <link rel="stylesheet" href="styles/daily-challenge.css" />
+    <link rel="stylesheet" href="styles/shared.css"/>
+    <link rel="stylesheet" href="styles/daily-challenge.css"/>
     <title>My Daily Challenge</title>
-  </head>
-  <body>
-    <img src="images/challenges-trophy.jpg" alt="a trophy" />
+</head>
+<body>
+<header>
+    <img src="images/challenges-trophy.jpg" alt="a trophy"/>
     <h1>Vitas's Challenge for Wednesday, May 7th</h1>
+</header>
+<main>
     <p id="todays-challenge">
-      Learn about the basics of web development - specifically dive into HTML &
-      CSS.
+        Learn about the basics of web development - specifically dive into HTML &
+        CSS.
     </p>
     <p>Explore the <a href="full-week.html">full week</a>.</p>
-  </body>
+    <p>Explore the <a href="full-week.html">full week</a>.</p>
+</main>
+</body>
 </html>
