--- a/daily-challenge/index.html
+++ b/daily-challenge/index.html
@@ -12,17 +12,16 @@
     <title>My Daily Challenge</title>
 </head>
 <body>
-<header>
-    <img src="images/challenges-trophy.jpg" alt="a trophy"/>
-    <h1>Vitas's Challenge for Wednesday, May 7th</h1>
-</header>
 <main>
+    <img src="images/challenges-trophy.jpg" alt="a trophy"/>
+    <h1>Vitas's Challenge for <span>Wednesday, May 7th</span></h1>
     <p id="todays-challenge">
         Learn about the basics of web development - specifically dive into HTML &
         CSS.
     </p>
-    <p>Explore the <a href="full-week.html">full week</a>.</p>
-    <p>Explore the <a href="full-week.html">full week</a>.</p>
 </main>
+<footer>
+    <p>Explore the <a href="full-week.html">full week</a>.</p>
+</footer>
 </body>
 </html>
