--- a/daily-challenge/index.html
+++ b/daily-challenge/index.html
@@ -7,6 +7,7 @@
             href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=Oswald:wght@200..700&display=swap"
             rel="stylesheet"
     />
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/shared.css"/>
     <link rel="stylesheet" href="styles/daily-challenge.css"/>
     <title>My Daily Challenge</title>
