--- a/travel-page/index.html
+++ b/travel-page/index.html
@@ -13,21 +13,40 @@
 <body>
 <header>
     <div id="page-logo">
-        <a href="/index.html">Travel Goals</a>
+        <a href="./index.html">Travel Goals</a>
     </div>
     <nav>
         <ul>
-            <li><a href="/places.html">Destinations</a></li>
+            <li><a href="./places.html">Destinations</a></li>
             <li><a href="">About</a></li>
         </ul>
     </nav>
 </header>
 <main>
-    <section>
+    <section id="hero">
+        <div id="hero-content">
+            <h1>Vitas's Travel Page</h1>
+            <p>Let's explore the world together!</p>
+            <a href="./places.html">Discover places</a>
+        </div>
     </section>
-    <section>
+    <section id="highlights">
+        <h2>Highlights</h2>
+        <ul class="destinations">
+            <li class="destination">
+                <img src="./images/places/miami.jpg" alt="MIami streets on sunny day">
+                <p>Miami <strong>USA</strong></p>
+            </li>
+            <li class="destination">
+                <img src="./images/places/munich.jpg" alt="Munich stadium in winter">
+                <p>Munich <strong>GERMANY</strong></p>
+            </li>
+            <li class="destination">
+                <img src="./images/places/barcelona.jpg" alt="Palm beach in Barcelona">
+                <p>Barcelona <strong>SPAIN</strong></p>
+            </li>
+        </ul>
     </section>
 </main>
-
 </body>
 </html>
