--- a/travel-page/index.html
+++ b/travel-page/index.html
@@ -32,9 +32,9 @@
     </section>
     <section id="highlights">
         <h2>Highlights</h2>
-        <ul class="destinations">
+        <ul id="destinations">
             <li class="destination">
-                <img src="./images/places/miami.jpg" alt="MIami streets on sunny day">
+                <img src="./images/places/miami.jpg" alt="Miami streets on sunny day">
                 <p>Miami <strong>USA</strong></p>
             </li>
             <li class="destination">
@@ -48,5 +48,11 @@
         </ul>
     </section>
 </main>
+<footer>
+    <ul>
+        <li><a href="https://www.instagram.com"><img src="./images/icons/insta.png" alt="Instagram logo"></a></li>
+        <li><a href="https://www.facebook.com"><img src="./images/icons/facebook.png" alt="Facebook logo"></a></li>
+    </ul>
+</footer>
 </body>
 </html>
