--- a/webfood-page/index.html
+++ b/webfood-page/index.html
@@ -20,6 +20,11 @@
             </li>
         </ul>
     </nav>
+    <a href="#side-drawer" class="menu-btn">
+        <span></span>
+        <span></span>
+        <span></span>
+    </a>
 </header>
 <main>
     <h1>Browse Our Delicious Meals</h1>
@@ -29,7 +34,7 @@
                 <article>
                     <img src="./images/risotto.jpg" alt="Risotto with tiger prawns">
                     <div class="food-item-content">
-                        <p>Risotto with Tiger Prawns</p>
+                        <h2>Risotto with Tiger Prawns</h2>
                         <a href="#" class="btn">Add to Cart</a>
                     </div>
                 </article>
@@ -38,7 +43,7 @@
                 <article>
                     <img src="./images/cheeseburgers.jpg" alt="Cheeseburgers with potatoes">
                     <div class="food-item-content">
-                        <p>Cheeseburgers</p>
+                        <h2>Cheeseburgers</h2>
                         <a href="#" class="btn">Add to Cart</a>
                     </div>
                 </article>
@@ -46,5 +51,17 @@
         </ul>
     </section>
 </main>
+<aside id="side-drawer">
+    <nav>
+        <ul>
+            <li>
+                <a href="#">Browse Meals</a>
+            </li>
+            <li>
+                <a href="#">My Orders</a>
+            </li>
+        </ul>
+    </nav>
+</aside>
 </body>
 </html>
