--- a/webfood-page/index.html
+++ b/webfood-page/index.html
@@ -26,6 +26,25 @@
         <span></span>
     </a>
 </header>
+<aside id="side-drawer">
+    <header>
+        <a href="#" class="menu-btn">
+            <span></span>
+            <span></span>
+            <span></span>
+        </a>
+    </header>
+    <nav>
+        <ul>
+            <li>
+                <a href="#">Browse Meals</a>
+            </li>
+            <li>
+                <a href="#">My Orders</a>
+            </li>
+        </ul>
+    </nav>
+</aside>
 <main>
     <h1>Browse Our Delicious Meals</h1>
     <section id="latest-products">
@@ -51,17 +70,5 @@
         </ul>
     </section>
 </main>
-<aside id="side-drawer">
-    <nav>
-        <ul>
-            <li>
-                <a href="#">Browse Meals</a>
-            </li>
-            <li>
-                <a href="#">My Orders</a>
-            </li>
-        </ul>
-    </nav>
-</aside>
 </body>
 </html>
