--- a/javascript-introduction/index.html
+++ b/javascript-introduction/index.html
@@ -10,13 +10,10 @@
     <script src="app.js" defer></script>
 </head>
 <body>
-<form action="">
-    <div class="control">
-        <label for="product-name">Product name</label>
-        <input type="text" id="product-name" name="product-name" maxlength="60">
-        <span id="charcount"><span id="remaining-chars">60</span>/60</span>
-    </div>
-    <button>Submit</button>
-</form>
+<h1>Hi there!</h1>
+<p>
+    This is a
+    <a href="#">link</a>
+</p>
 </body>
 </html>
